# Django-Channels

./: db.sqlite3  pyproject.toml
core/: asgi.py  settings.py
diagrams/: test.drawio
home/: consumers.py
